--- a/styles.css
+++ b/styles.css
@@ -424,6 +424,11 @@ span {
 /* ========================
    RESPONSIVE BREAKPOINTS
 ======================== */
+@media (max-width: 980px) {
+.brand-block{
+  display: none;
+}
+}
 
 @media (max-width: 620px) {
   .image-row,
