--- a/styles.css
+++ b/styles.css
@@ -424,9 +424,11 @@ span {
 /* ========================
    RESPONSIVE BREAKPOINTS
 ======================== */
-@media (max-width: 980px) {
-.brand-block{
-  display: none;
+@media (max-width: 980px) { 
+  .info-section {
+    grid-template-columns: 3fr;
+  .brand-block{
+    display: none;
 }
 }
 
